emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  containers:
    - name: busybox
      image: busybox
      command:
        ["sh", "-c", "echo Hello Kubernetes > /data/hello.txt; sleep 3600"]
      volumeMounts:
        - name: my-volume
          mountPath: /data
    - name: other
      image: busybox
      command: ["sh", "-c", "echo Hello CKA > /data/cka.txt; sleep 3600"]
      volumeMounts:
        - name: my-volume
          mountPath: /data
  volumes:
    - name: my-volume
      emptyDir: {}
