hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - image: test-webserver
      name: test-container
      volumeMounts:
        - mountPath: /test-pod
          name: test-volume
  volumes:
    - name: test-volume
      hostPath:
        path: /data
        type: Directory
