liveness_readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-readiness-app
spec:
  containers:
    - name: custom-app
      image: busybox
      args:
        - /bin/sh
        - -c
        - |
          touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
      livenessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
        initialDelaySeconds: 5
        periodSeconds: 5
      readinessProbe:
        exec:
          command:
            - cat
            - /tmp/healthy
        initialDelaySeconds: 5
        periodSeconds: 5
