netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: netshoot
  name: netshoot
spec:
  containers:
    - image: nicolaka/netshoot
      command: ["sh", "-c", "sleep 3600"]
      name: netshoot
      resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
