nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-app
  name: web-app-nodeport
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31080
  selector:
    app: web-app
  type: NodePort
status:
  loadBalancer: {}
